# organic_battery_predictor

./: LICENSE  README.md  inverse_design.ipynb  meta_learner.ipynb  multi_task_learning.ipynb  pyproject.toml
