[project]
name = "ne"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "optuna>=4.2.0",
    "optuna-integration[tf-keras]>=4.2.1",
    "plotly>=5.24.1",
    "psmiles",
    "rdkit>=2024.9.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.0",
    "tensorflow==2.16.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
psmiles = { git = "https://github.com/Ramprasad-Group/psmiles.git" }
